--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -19,7 +19,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install pytest
       - name: Test with pytest
-        working-directory: ./
+        working-directory: ./tests
         run: pytest
   deploy:
     # make sure ci passes
