--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -19,8 +19,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install pytest
       - name: Test with pytest
-        working-directory: ./tests
-        run: pytest
+        run: python -m pytest
   deploy:
     # make sure ci passes
     needs: build
